# arcpilot

./: .cursorrules  .gitignore  Cargo.toml  GETTING_STARTED.md  Makefile  README.md  docker-compose.yml  env.example
ai-engine/: Cargo.toml
ai-engine/src/: config.rs  kafka.rs  main.rs  models.rs  opportunities.rs  redis_client.rs  risk.rs  server.rs
api-gateway/: Cargo.toml
api-gateway/src/: main.rs
blockchain-executor/: Cargo.toml
blockchain-executor/src/: arc_client.rs  config.rs  executor.rs  main.rs  server.rs  types.rs
frontend/: next.config.js  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
infrastructure/sql/: init.sql
smart-contracts/: hardhat.config.ts  package.json
smart-contracts/contracts/: ArbitrageExecutor.sol
smart-contracts/scripts/: deploy.ts
