[package]
name = "ai-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "ai-engine"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
dotenvy.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true
redis.workspace = true
rdkafka.workspace = true

# AI/ML specific
ndarray = "0.15"
linfa = "0.7"
linfa-linear = "0.7"

# HTTP server
tower.workspace = true
tower-http.workspace = true

[dev-dependencies]
tokio-test = "0.4"

