[package]
name = "api-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "api-gateway"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
dotenvy.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx.workspace = true
redis.workspace = true
reqwest.workspace = true
jsonwebtoken.workspace = true

# HTTP
tower.workspace = true
tower-http.workspace = true

# WebSocket
tokio-tungstenite = "0.21"

[dev-dependencies]
tokio-test = "0.4"

