[package]
name = "blockchain-executor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "blockchain-executor"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
dotenvy.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx.workspace = true
redis.workspace = true
ethers.workspace = true

# HTTP
tower.workspace = true
tower-http.workspace = true

[dev-dependencies]
tokio-test = "0.4"

